# plantae

./: .gitignore  CONTRIBUTING_botanist.md  CONTRIBUTING_developer.md  INDEX.md  OPEN_QUESTIONS.md  README.md  REQUIREMENTS.md  V2_BROWSER_RUNTIME_PLAN.md  environment.yml  pyproject.toml
.github/workflows/: render.yml  test.yml
growth_functions/: __init__.py
materials/: README.md  library.json
mixes/: restoration_demo_mix.yaml
plant_sim/: cli.py
plant_sim/codegen/: cross_check.py  generator.py  validator.py
plant_sim/render/: derive.py  export.py
plant_sim/runtime/: __init__.py  _emit_vectors.py  pcg.py
plant_sim/schema/: material.py  mix.py  render_context.py  scene.py  seed.py  species.py  units.py
plant_sim/server/: app.py
scenes/: prairie_demo.yaml
species/_schema/: species.schema.json
species/asteraceae/: echinacea_purpurea.yaml
species/poaceae/: andropogon_gerardii.yaml
templates/archetypes/: README.md  rosette_scape_composite.lpy.j2  tiller_clump.lpy.j2
templates/macros/: queryable.lpy.j2
tests/: test_codegen.py  test_codegen_andropogon.py  test_cross_check.py  test_materials.py  test_mix.py  test_pcg.py  test_pcg_vectors.py  test_render.py  test_scene.py  test_schema.py  test_seed.py  test_server.py  test_units.py  test_validator.py
tests/fixtures/: invalid_height_range_inverted.yaml  invalid_missing_required.yaml  invalid_phenology_order.yaml  invalid_unknown_archetype.yaml  pcg_vectors.json  valid_echinacea_custom_unit.yaml  (+1 more)
viewer/: index.html  main.js  material_loader.js  package.json  pcg.js  seed.js
(+1 files in other folders)
